--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.26.3",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.2"
   },
