--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "auth-header": "^1.0.0",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
@@ -23,6 +26,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-loading-indicators": "^1.0.1",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.26.3",
     "tailwind-merge": "^3.4.0",
