--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
+    "pnpm": "^10.26.0",
     "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
